# Reusable-Django-App-Template

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
django_app_template/: apps.py
